# PyPackageTemplate

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  cookiecutter.json  pyproject.toml  setup_venv.bat  setup_venv.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  cookiecutter_test.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst  {{ cookiecutter.project_slug }}.rst
src/cookiecutter_test/: __init__.py  cli.py
tests/: __init__.py  test_cookiecutter_test.py
{{cookiecutter.project_slug}}/: HISTORY.rst  LICENSE  pyproject.toml  requirements_dev.txt  setup_venv.bat  setup_venv.sh  tox.ini
{{cookiecutter.project_slug}}/docs/: conf.py  installation.rst  modules.rst
{{cookiecutter.project_slug}}/src/{{ cookiecutter.project_slug }}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/tests/: test_{{ cookiecutter.project_slug }}.py
