[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter_test"
version = "0.1.0"
description = "a cookie cutter test package"
readme = "README.rst"
authors = [
  {name = "Yang Xiong", email = "yxiong@umich.edu"}
]
maintainers = [
  {name = "Yang Xiong", email = "yxiong@umich.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/supersheepbear/cookiecutter_test/issues"
changelog = "https://github.com/supersheepbear/cookiecutter_test/blob/master/changelog.md"
homepage = "https://github.com/supersheepbear/cookiecutter_test"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

